--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     compile project(':peermountain_core')
     compile project(':linkedin-sdk')
+    compile 'com.facebook.android:facebook-android-sdk:4.20.0'
 
     //idcheck.io
     compile 'de.mindpipe.android:android-logging-log4j:1.0.3'
