--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -25,14 +25,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile project(':peermountain_core')
     compile project(':linkedin-sdk')
-    compile ('com.facebook.android:facebook-android-sdk:4.27.0')
-    {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-    }
+    compile('com.facebook.android:facebook-android-sdk:4.27.0')
+            {
+                exclude group: 'com.android.support', module: 'appcompat-v7'
+            }
+    compile "com.android.support:support-v4:${rootProject.ext.supportLibraryVersion}"
+
+    compile 'com.balysv:material-ripple:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
