--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     compile "com.android.support:support-v4:${rootProject.ext.supportLibraryVersion}"
 
     compile 'com.balysv:material-ripple:1.0.2'
+    compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
