--- a/peermountain_sdk/src/main/AndroidManifest.xml
+++ b/peermountain_sdk/src/main/AndroidManifest.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.peermountain.sdk"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true"/>
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/SdkTheme"        >
 
         <!-- android:theme="@style/SdkTheme" -->
 
         <activity
             android:name=".ui.LoginActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/SdkTheme">
         </activity>
         <activity
             android:name=".ui.ScanIdActivity"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.register.RegisterActivity"
-                  android:theme="@style/SdkTheme"
-                  android:windowSoftInputMode="adjustResize"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".ui.register.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SdkTheme"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/SdkTheme">
         </activity>
     </application>
 
