Second build with registration flow :   1. Register pin or fingerprint   2. Register keywords (for now unlocks "Go Next" button after you add 4 words separated by comma )   3. Review kyewords to be saved   4. Static tinder cards with btn to start scanning ID(i have added an extra message to start scan from MRZ side) Prepare SDK , ask for permissions and launch the scanning SDK with options for both sides and NFC (First I was using a spinning wheel to show progress, but because the AreadNext SDK is doing to much work on the UI thread the animation freezes and changed just to show a label "Loading" to indicate to the user that we are loading and not to looks like the UI flow is breaking )   5. Show scanned result (The design is made with 1 button to go step by step, but all steps are implemented by AreadNext SDK in a flow, I have changed there this button to 2 buttons "Accept" and "Reject" , where reject will fire scanning SDK again and accept will go to final edit profile screen)   6. Create Profile if the scanning sdk has detected a face image is set on top, fields name, country and birthday are also populated by the data from the ID, but can be manually changed by the user. The are no mandatory fields. You can un/link Facebook or/and LinkedIn profile, as if there is no face image extracted will load the image from the provider.    7. Home screen- static cards for now , no animation . IMPORTANT WHEN YOU CLICK ON THE SQUARE BUTTON OF THE CARD WITH "->" WILL WIPE YOUR DATA AND RESEND YOU TO REGISTER AGAIN!!!    8. Login screen - for now every time when you enter the app will be asked to login if there is a profile created or register. Login screen looks the same way as Register pin, but instead of asking you to repeat pin will check if is same with saved one and the title is changed to Login. If the user is authorized with pin the app will hide the fingerprint button from the keyboard, if is fingerprint will directly ask the user to scan his finger (probably not a goo

--- a/peermountain_sdk/src/main/AndroidManifest.xml
+++ b/peermountain_sdk/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
-        android:theme="@style/SdkTheme"        >
+        android:theme="@style/PmSdkTheme"        >
 
         <!-- android:theme="@style/SdkTheme" -->
 
         <activity
             android:name=".ui.LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SdkTheme">
+            android:theme="@style/PmSdkTheme">
         </activity>
         <activity
             android:name=".ui.ScanIdActivity"
@@ -28,13 +28,12 @@
         <activity
             android:name=".ui.register.RegisterActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SdkTheme"
+            android:theme="@style/PmSdkTheme"
             android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
-            android:name=".ui.home.HomeActivity"
-            android:label="@string/title_activity_home"
-            android:theme="@style/SdkTheme">
+            android:name=".ui.authorized.HomeActivity"
+            android:theme="@style/PmSdkTheme">
         </activity>
     </application>
 
