--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.library'
+//apply plugin: 'com.jakewharton.butterknife'//to generate R2
 
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -35,9 +36,11 @@ dependencies {
                 exclude group: 'com.android.support', module: 'appcompat-v7'
             }
     compile "com.android.support:support-v4:${rootProject.ext.supportLibraryVersion}"
-
+    //ripple animation over all views
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    // tinder like cards
+    compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     testCompile 'junit:junit:4.12'
 }
