--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -12,8 +12,9 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
