--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
+    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
 }
