--- a/peermountain_sdk/src/main/AndroidManifest.xml
+++ b/peermountain_sdk/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:required="true"/>
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/PmSdkTheme"        >
 
         <!-- android:theme="@style/SdkTheme" -->
