--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -13,6 +13,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+
     buildTypes {
         release {
             debuggable false
@@ -32,18 +33,22 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 
-    compile 'com.google.code.gson:gson:2.7'
     compile "com.android.support:support-annotations:${rootProject.ext.supportLibraryVersion}"
 
     //idcheck.io AreadNext
-    compile (name:'smartsdk-4.10.0-release', ext:'aar')
-    compile 'au.com.datasymphony:EasyFlow:1.3.1'
+    compile(name: 'smartsdk-4.10.0-release', ext: 'aar')
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
     compile "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+
+
+    compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 //    compile "com.google.android.gms:play-services-vision:${rootProject.ext.playServicesVersion}" // this is only for the selfie feature
 //    compile 'com.android.support:multidex:1.0.1' //this must be added in app gradle also to implement multidex logic
     //idcheck.io end
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'au.com.datasymphony:EasyFlow:1.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
