save sent file in background intro

--- a/peermountain_sdk/src/main/AndroidManifest.xml
+++ b/peermountain_sdk/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:allowBackup="true"
         android:supportsRtl="true"
         android:largeHeap="true"
-        android:theme="@style/PmSdkTheme"        >
+        android:theme="@style/PmSdkTheme"
+        tools:replace="android:theme">
 
         <!-- android:theme="@style/SdkTheme" -->
 
