--- a/peermountain_core/src/main/AndroidManifest.xml
+++ b/peermountain_core/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.peermountain.core"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -19,7 +20,8 @@
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
-        android:theme="@style/PmCoreTheme" >
+        android:theme="@style/PmCoreTheme"
+        tools:replace="android:theme" >
         <activity android:name=".share.ShareContactActivity"
                   android:theme="@style/PmCoreTheme"
             android:screenOrientation="portrait">
