--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile 'com.google.zxing:core:3.2.1'
+//    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
     testCompile 'junit:junit:4.12'
 }
