--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -46,9 +46,9 @@ dependencies {
 //    compile "com.google.android.gms:play-services-vision:${rootProject.ext.playServicesVersion}" // this is only for the selfie feature
 //    compile 'com.android.support:multidex:1.0.1' //this must be added in app gradle also to implement multidex logic
     //idcheck.io end
-    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'au.com.datasymphony:EasyFlow:1.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.barteksc:pdfium-android:1.7.0'
     testCompile 'junit:junit:4.12'
 }
