--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     compile 'au.com.datasymphony:EasyFlow:1.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.github.barteksc:pdfium-android:1.7.0'
+    compile 'com.google.zxing:core:3.3.0'
     testCompile 'junit:junit:4.12'
 }
