--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     compile project(path: ':peermountain_sdk')
     //idcheck.io
-    compile 'com.android.support:multidex:1.0.1'
-
+    compile 'com.android.support:multidex:1.0.2'
+    compile "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
 }
+apply plugin: 'com.google.gms.google-services'
