--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(':peermountain_core')
+    compile (project(':peermountain_core'))
     compile project(':linkedin-sdk')
     compile('com.facebook.android:facebook-android-sdk:4.27.0')
             {
@@ -46,5 +46,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
+//    compile "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
     testCompile 'junit:junit:4.12'
+
 }
