--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
+//    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
 
     compile project(path: ':peermountain_sdk')
     //idcheck.io
