--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
-//    compile "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
+    compile "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
     testCompile 'junit:junit:4.12'
 
 }
