--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -29,6 +30,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -49,6 +51,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.github.barteksc:pdfium-android:1.7.0'
     compile 'com.google.zxing:core:3.3.0'
+    compile('com.otaliastudios:cameraview:1.3.1')
     testCompile 'junit:junit:4.12'
 
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
