--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -32,10 +32,10 @@ dependencies {
 
     compile (project(':peermountain_core'))
     compile project(':linkedin-sdk')
-    compile('com.facebook.android:facebook-android-sdk:4.27.0')
+    compile('com.facebook.android:facebook-android-sdk:4.27.0',
             {
                 exclude group: 'com.android.support', module: 'appcompat-v7'
-            }
+            })
     compile "com.android.support:support-v4:${rootProject.ext.supportLibraryVersion}"
     //ripple animation over all views
     // tinder like cards
@@ -43,6 +43,7 @@ dependencies {
 //    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.makeramen:roundedimageview:2.3.0'
+//    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
