--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -24,6 +25,7 @@ allprojects {
             dirs 'libs'
             dirs project(':peermountain_core').file('libs')
         }
+        google()
     }
 }
 
