--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -35,6 +35,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
 
     compile "com.android.support:support-annotations:${rootProject.ext.supportLibraryVersion}"
 
@@ -52,7 +53,6 @@ dependencies {
     compile 'com.github.barteksc:pdfium-android:1.7.0'
     compile 'com.google.zxing:core:3.3.0'
     compile('com.otaliastudios:cameraview:1.3.1')
-    testCompile 'junit:junit:4.12'
 
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
