--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -47,13 +47,23 @@ dependencies {
 //    compile "com.google.android.gms:play-services-vision:${rootProject.ext.playServicesVersion}" // this is only for the selfie feature
 //    compile 'com.android.support:multidex:1.0.1' //this must be added in app gradle also to implement multidex logic
     //idcheck.io end
+
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'au.com.datasymphony:EasyFlow:1.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    //read pdf
     compile 'com.github.barteksc:pdfium-android:1.7.0'
+    //create barcode
     compile 'com.google.zxing:core:3.3.0'
+    //scan barcode
     compile('com.otaliastudios:cameraview:1.3.1')
-
+    //ODK
+    implementation(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.7.0') {
+        exclude module: 'joda-time'
+    }
+    implementation group: 'com.jakewharton.timber', name: 'timber', version: '4.5.1'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+    //ODK end
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
 }
