XFormActivity download and load XForm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ buildTypes {
         minifyEnabled false
         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+    debug {
+        minifyEnabled false
+    }
 }
 }
 
