--- a/peermountain_core/src/main/AndroidManifest.xml
+++ b/peermountain_core/src/main/AndroidManifest.xml
@@ -27,16 +27,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/PmCoreTheme">
         </activity>
-        <activity android:name=".camera.CameraActivity"
-                  android:screenOrientation="portrait"
-                  android:configChanges="orientation|keyboardHidden"
-                  android:theme="@style/PmCoreTheme">
+        <activity
+            android:name=".camera.CameraActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/PmCoreTheme">
         </activity>
         <activity
             android:name=".camera.ShowLiveSelfieActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
             android:theme="@style/PmCoreTheme">
+        </activity>
+        <activity android:name=".odk.XFormActivity">
         </activity>
     </application>
 
