--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -59,11 +59,13 @@ dependencies {
     //scan barcode
     compile('com.otaliastudios:cameraview:1.3.1')
     //ODK
-    implementation(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.7.0') {
+    implementation(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.8.0') {
         exclude module: 'joda-time'
     }
 //    implementation group: 'com.jakewharton.timber', name: 'timber', version: '4.5.1'
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+    implementation group: 'net.sf.kxml', name: 'kxml2', version: '2.3.0'
+    implementation group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
     api ('com.appyvet:materialrangebar:1.4.1') {
         exclude module: 'support-compat'
     }
