location widget finished select file widget started

--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -71,6 +71,8 @@ dependencies {
         exclude module: 'support-compat'
     }
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //ODK end
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
