--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     //scan barcode
     compile('com.otaliastudios:cameraview:1.3.1')
     //ODK
-    implementation(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.8.0') {
+    api(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.8.0') {
 //        exclude module: 'joda-time'
     }
 //    implementation group: 'com.jakewharton.timber', name: 'timber', version: '4.5.1'
@@ -73,7 +73,6 @@ dependencies {
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.romandanylyk:pageindicatorview:1.0.0'
     //ODK end
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
