--- a/peermountain_sdk/build.gradle
+++ b/peermountain_sdk/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.yuyakaido.android:card-stack-view:1.0.0-beta6'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
+    implementation 'com.romandanylyk:pageindicatorview:1.0.0'
     testCompile 'junit:junit:4.12'
 
 }
