--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     }
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.squareup.picasso:picasso:2.5.2'
     //ODK end
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
