--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.apollographql.android'
 
 android {
     compileSdkVersion 26
@@ -76,6 +77,6 @@ dependencies {
     //ODK end
     compile "com.google.android.gms:play-services-nearby:${rootProject.ext.playServicesVersion}"
 
-    api 'com.apollographql.apollo:apollo-runtime:0.4.4'
+    implementation 'com.apollographql.apollo:apollo-runtime:0.4.4'
 
 }
