1.request Teleferic for public address
2.encode data with Symmetric AES key
3.decode data with Symmetric AES key
4.generate HASH SHA-256 - byte[] and String
5.generate Hmac-SHA256 - Base64String
6.create local RSA key pair with SIGNATURE_PADDING_RSA_PKCS1
7.sign data with the RSA private key - SHA256withRSA
8.verify signature with the RSA public key - SHA256withRSA

--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,7 @@ ext {
     // dependencies versions
     supportLibraryVersion = '26.1.0'
     playServicesVersion = '11.8.0'
+    compileSdkVersion = 26
+    buildToolsVersion  = "26.0.2"
+    minSdkVersion = 18
 }
