--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     //create barcode
     compile 'com.google.zxing:core:3.3.0'
     //scan barcode
-    compile('com.otaliastudios:cameraview:1.3.1')
+    compile('com.otaliastudios:cameraview:1.5.0')
+    compile 'com.android.support:exifinterface:26.+'
     //ODK
     api(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.8.0') {
 //        exclude module: 'joda-time'
