1. Fix on menu animation to fix resizing activity on keyboard show
2. XForm with no mandatory questions Form A

3. Fix on menu exit button to clear user session and to ask you to login on next start. Till now was holding the session for 5 min. This is still possible if you exit by back button(if you return in 5 min you will not need to login). If you exit by menu exit button you have to login even if you immediately return.

4. Fix on keywords screen

5. no more app backup

--- a/peermountain_core/src/main/AndroidManifest.xml
+++ b/peermountain_core/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
     <!-- Required for Nearby Connections END -->
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/PmCoreTheme"
         tools:replace="android:theme">
