--- a/peermountain_sdk/src/main/AndroidManifest.xml
+++ b/peermountain_sdk/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:required="true"/>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/PmSdkTheme"
@@ -24,7 +24,8 @@
             android:name=".ui.LoginActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@style/PmSdkTheme">
+            android:theme="@style/PmSdkTheme"
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
             android:name=".ui.register.RegisterActivity"
@@ -37,7 +38,8 @@
             android:name=".ui.authorized.HomeActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@style/PmSdkTheme">
+            android:theme="@style/PmSdkTheme"
+            android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
