--- a/peermountain_core/build.gradle
+++ b/peermountain_core/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation "com.android.support:support-v4:${rootProject.ext.playServicesVersion}"
 
     api (project(':pm_livecycle')) // contains :common and :pm_net
 
@@ -64,7 +64,7 @@ dependencies {
     compile 'com.google.zxing:core:3.3.0'
     //scan barcode
     compile('com.otaliastudios:cameraview:1.5.0')
-    compile 'com.android.support:exifinterface:26.+'
+    compile 'com.android.support:exifinterface:27.1.1'
     //ODK
     api(group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.8.0') {
 //        exclude module: 'joda-time'
