--- a/pm_net/build.gradle
+++ b/pm_net/build.gradle
@@ -12,6 +12,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -32,8 +33,16 @@ dependencies {
     implementation 'org.msgpack:msgpack-core:0.8.15'
     implementation 'org.msgpack:jackson-dataformat-msgpack:0.8.15'
 
+    // https://rtyley.github.io/spongycastle/
+//    implementation 'com.madgag.spongycastle:core:1.58.0.0'
+    implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
+
     // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk15
-    implementation group: 'org.bouncycastle', name: 'bcmail-jdk15', version: '1.46'
+//    implementation group: 'org.bouncycastle', name: 'bcmail-jdk15on', version: '1.60'
+
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
+//    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
+
 
 
     testImplementation 'junit:junit:4.12'
